[gd_scene load_steps=39 format=3 uid="uid://bk1j0ry2wodwx"]

[ext_resource type="Script" path="res://scenes/board_scene.gd" id="1_a3hl6"]
[ext_resource type="Resource" uid="uid://fwry13uso5ih" path="res://characters/test_character.tres" id="2_7ppei"]
[ext_resource type="Texture2D" uid="uid://cp0tbcvnregcx" path="res://art/board_layout.png" id="3_rlrda"]
[ext_resource type="PackedScene" uid="uid://d3n0b2llqdfoa" path="res://scenes/card_target_selector/card_target_selector.tscn" id="4_bc7qy"]
[ext_resource type="PackedScene" uid="uid://cuqw6uv2o8wh4" path="res://scenes/ui/draft_area.tscn" id="5_gcfcl"]
[ext_resource type="PackedScene" uid="uid://5y44wp4db60" path="res://scenes/enemy/enemy_handler.tscn" id="6_smh2x"]
[ext_resource type="Resource" uid="uid://d384vrpgclv3k" path="res://enemies/workers/level1_enemy1.tres" id="7_cqbfi"]
[ext_resource type="Resource" uid="uid://doy21ln1ou8a6" path="res://enemies/workers/level1_enemy2.tres" id="8_q8aot"]
[ext_resource type="Resource" uid="uid://baua4eplc6af6" path="res://enemies/test_enemy.tres" id="9_45tro"]
[ext_resource type="Resource" uid="uid://dvb3orc884fuq" path="res://enemies/security/rent_a_cop.tres" id="10_yd431"]
[ext_resource type="Resource" uid="uid://dv1cdjdl0ljep" path="res://enemies/managers/micro_manager.tres" id="11_lxsty"]
[ext_resource type="Resource" uid="uid://elxehtprb5ts" path="res://enemies/managers/obstructive_manager.tres" id="12_pp6go"]
[ext_resource type="Resource" uid="uid://b5gfh8aruihmu" path="res://enemies/managers/procrastinator_manager.tres" id="13_jr5xv"]
[ext_resource type="Resource" uid="uid://b5u0hsrjjyyle" path="res://enemies/test_manager.tres" id="14_48ac5"]
[ext_resource type="Script" path="res://scenes/map/map.gd" id="15_ehr3i"]
[ext_resource type="Script" path="res://scenes/map/map_generator.gd" id="16_oi5jq"]
[ext_resource type="PackedScene" uid="uid://12rfq5pjfu5g" path="res://scenes/modifier_handler/modifier_handler.tscn" id="17_ndbpf"]
[ext_resource type="PackedScene" uid="uid://c35pkqpitei47" path="res://scenes/modifier_handler/modifier.tscn" id="18_32hpr"]
[ext_resource type="PackedScene" uid="uid://dpg75fuxa5jlm" path="res://scenes/player/player.tscn" id="19_lk55b"]
[ext_resource type="Script" path="res://scenes/player_handler.gd" id="20_m1xqo"]
[ext_resource type="Script" path="res://scenes/resource_bar.gd" id="21_jqsnt"]
[ext_resource type="Texture2D" uid="uid://bglc5m5wg6bje" path="res://place_holder_art/keycard.png" id="22_8kyxl"]
[ext_resource type="PackedScene" uid="uid://jlg46gnlu600" path="res://scenes/ui/health_ui.tscn" id="23_mt5td"]
[ext_resource type="PackedScene" uid="uid://dqcdkmgio64ef" path="res://scenes/ui/gold_ui.tscn" id="24_pegb5"]
[ext_resource type="PackedScene" uid="uid://baamlfnbthkdi" path="res://scenes/ui/buy_ui.tscn" id="25_k5u75"]
[ext_resource type="PackedScene" uid="uid://ds77ufvfvqn3k" path="res://scenes/ui/move_ui.tscn" id="26_p4j56"]
[ext_resource type="PackedScene" uid="uid://bxgj3ykpuyk2e" path="res://scenes/ui/fight_ui.tscn" id="27_46vr1"]
[ext_resource type="Script" path="res://scenes/relic_container.gd" id="28_3b1tb"]
[ext_resource type="Script" path="res://scenes/play_area.gd" id="29_irx4u"]
[ext_resource type="PackedScene" uid="uid://c4olmej38c3m2" path="res://scenes/ui/card_pile_opener.tscn" id="30_wm2ut"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="31_7r26a"]
[ext_resource type="Script" path="res://scenes/shop_popup.gd" id="32_8ayl3"]
[ext_resource type="PackedScene" uid="uid://drbypv8b3pnir" path="res://scenes/card/shop_card.tscn" id="33_33f2v"]
[ext_resource type="Script" path="res://scenes/ui/CardPileViewer.gd" id="34_qlj1t"]
[ext_resource type="PackedScene" uid="uid://j4gt2sii1mtk" path="res://scenes/ui/tooltip_popup.tscn" id="35_xpt4n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mng3u"]
size = Vector2(976, 446)

[sub_resource type="LabelSettings" id="LabelSettings_dg1wj"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_h40q4"]
font_size = 30

[node name="BoardScene" type="Node2D"]
script = ExtResource("1_a3hl6")
character = ExtResource("2_7ppei")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("3_rlrda")

[node name="CardDropArea" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(488, 223)
shape = SubResource("RectangleShape2D_mng3u")

[node name="CardTargetSelector" parent="." instance=ExtResource("4_bc7qy")]

[node name="DraftArea" parent="." instance=ExtResource("5_gcfcl")]
position = Vector2(983, 363)

[node name="EnemyHandler" parent="." instance=ExtResource("6_smh2x")]
all_enemies = Array[Resource("res://custom_resources/enemy_stats.gd")]([ExtResource("7_cqbfi"), ExtResource("8_q8aot"), ExtResource("9_45tro"), ExtResource("10_yd431")])
all_managers = Array[Resource("res://custom_resources/enemy_stats.gd")]([ExtResource("11_lxsty"), ExtResource("12_pp6go"), ExtResource("13_jr5xv"), ExtResource("14_48ac5")])

[node name="Map" type="Node2D" parent="." groups=["map"]]
position = Vector2(55, 42)
script = ExtResource("15_ehr3i")

[node name="Rooms" type="Node2D" parent="Map"]

[node name="Visuals" type="Node2D" parent="Map"]

[node name="MapGenerator" type="Node" parent="Map"]
script = ExtResource("16_oi5jq")

[node name="ModifierHandler" parent="Map" instance=ExtResource("17_ndbpf")]

[node name="MoveCostModifier" parent="Map/ModifierHandler" instance=ExtResource("18_32hpr")]
type = 7

[node name="Player" parent="." instance=ExtResource("19_lk55b")]
position = Vector2(140, 129)
stats = ExtResource("2_7ppei")

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("player", "hand") groups=["player_handler"]]
script = ExtResource("20_m1xqo")
player = NodePath("../Player")
hand = NodePath("../PlayArea/PlayerCards/Hand")

[node name="ResourceBar" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ResourceBar"]
offset_top = 454.0
offset_right = 976.0
offset_bottom = 496.0
color = Color(0.151276, 0.151276, 0.151276, 0.654902)

[node name="ResourceBar" type="HBoxContainer" parent="ResourceBar"]
offset_left = 19.0
offset_top = 454.0
offset_right = 968.0
offset_bottom = 496.0
theme_override_constants/separation = 18
script = ExtResource("21_jqsnt")

[node name="KeycardCenterContainer" type="CenterContainer" parent="ResourceBar/ResourceBar"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Keycard" type="TextureRect" parent="ResourceBar/ResourceBar/KeycardCenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("22_8kyxl")

[node name="Health" parent="ResourceBar/ResourceBar" instance=ExtResource("23_mt5td")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
show_max_hp = true

[node name="Gold" parent="ResourceBar/ResourceBar" instance=ExtResource("24_pegb5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Buy" parent="ResourceBar/ResourceBar" instance=ExtResource("25_k5u75")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Move" parent="ResourceBar/ResourceBar" instance=ExtResource("26_p4j56")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Fight" parent="ResourceBar/ResourceBar" instance=ExtResource("27_46vr1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="RelicScrollContainer" type="ScrollContainer" parent="ResourceBar/ResourceBar"]
custom_minimum_size = Vector2(420, 42)
layout_mode = 2
vertical_scroll_mode = 0

[node name="RelicContainer" type="HBoxContainer" parent="ResourceBar/ResourceBar/RelicScrollContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
script = ExtResource("28_3b1tb")

[node name="PlayArea" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("29_irx4u")

[node name="PlayerCards" type="HBoxContainer" parent="PlayArea"]
custom_minimum_size = Vector2(948, 0)
offset_left = 15.0
offset_top = 518.0
offset_right = 963.0
offset_bottom = 658.0
theme_override_constants/separation = 6

[node name="DrawPileButton" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("counter") instance=ExtResource("30_wm2ut")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
counter = NodePath("Counter")
title = "Draw"

[node name="Counter" type="Label" parent="PlayArea/PlayerCards/DrawPileButton"]
layout_mode = 2
offset_top = 50.0
offset_right = 19.0
offset_bottom = 73.0
text = "99"

[node name="Hand" type="HBoxContainer" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
custom_minimum_size = Vector2(836, 0)
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1
script = ExtResource("31_7r26a")
player = NodePath("../../../Player")

[node name="DiscardPileButton" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("counter") instance=ExtResource("30_wm2ut")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
counter = NodePath("Counter")
title = "Discard"

[node name="Counter" type="Label" parent="PlayArea/PlayerCards/DiscardPileButton"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
offset_left = 23.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 22.0
text = "999"
horizontal_alignment = 2

[node name="EndTurnButton" type="Button" parent="PlayArea"]
offset_left = 452.0
offset_top = 673.0
offset_right = 530.0
offset_bottom = 704.0
text = "End Turn"

[node name="ShopPopup" type="CanvasLayer" parent="." groups=["shop"]]
visible = false
script = ExtResource("32_8ayl3")

[node name="GrayOut" type="ColorRect" parent="ShopPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -303.0
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.823529)

[node name="ShopCardRow" type="HBoxContainer" parent="ShopPopup"]
offset_left = 289.0
offset_top = 67.0
offset_right = 719.0
offset_bottom = 243.0
theme_override_constants/separation = 65
alignment = 1

[node name="ShopCard" parent="ShopPopup/ShopCardRow" instance=ExtResource("33_33f2v")]
layout_mode = 2

[node name="ShopCard2" parent="ShopPopup/ShopCardRow" instance=ExtResource("33_33f2v")]
layout_mode = 2

[node name="ShopCard3" parent="ShopPopup/ShopCardRow" instance=ExtResource("33_33f2v")]
layout_mode = 2

[node name="ShopRelicRow" type="HBoxContainer" parent="ShopPopup"]
custom_minimum_size = Vector2(430, 80)
offset_left = 289.0
offset_top = 290.0
offset_right = 389.0
offset_bottom = 370.0
theme_override_constants/separation = 65
alignment = 1

[node name="ModifierHandler" parent="ShopPopup" instance=ExtResource("17_ndbpf")]

[node name="Label" type="Label" parent="ShopPopup"]
offset_left = 406.0
offset_top = -3.0
offset_right = 574.0
offset_bottom = 42.0
text = "Storeroom"
label_settings = SubResource("LabelSettings_dg1wj")

[node name="CardPileView" type="CanvasLayer" parent="."]

[node name="CardPileViewer" type="ColorRect" parent="CardPileView"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.784314)
script = ExtResource("34_qlj1t")

[node name="VBoxContainer" type="VBoxContainer" parent="CardPileView/CardPileViewer"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1188.0
offset_bottom = 670.0
theme_override_constants/separation = 36

[node name="CardPileTitle" type="Label" parent="CardPileView/CardPileViewer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
text = "Test text"
label_settings = SubResource("LabelSettings_h40q4")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CardPileView/CardPileViewer/VBoxContainer"]
custom_minimum_size = Vector2(1080, 542)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CardPileGrid" type="GridContainer" parent="CardPileView/CardPileViewer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1080, 0)
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 8

[node name="Tooltip" type="CanvasLayer" parent="."]

[node name="TooltipPopup" parent="Tooltip" instance=ExtResource("35_xpt4n")]
visible = false

[node name="DebugButton" type="CanvasLayer" parent="."]

[node name="PlusMoveButton" type="Button" parent="DebugButton"]
offset_right = 8.0
offset_bottom = 8.0
text = "+1Move"

[node name="PlusMoveButton2" type="Button" parent="DebugButton"]
offset_top = 36.0
offset_right = 92.0
offset_bottom = 67.0
text = "+999 Move"

[node name="PlusBuyButton" type="Button" parent="DebugButton"]
offset_left = 97.0
offset_right = 166.0
offset_bottom = 31.0
text = "+1Buy"

[node name="PlusBuyButton2" type="Button" parent="DebugButton"]
offset_left = 97.0
offset_top = 36.0
offset_right = 171.0
offset_bottom = 67.0
text = "+999Buy"

[node name="DrawButton" type="Button" parent="DebugButton"]
offset_left = 171.0
offset_right = 221.0
offset_bottom = 31.0
text = "Draw
"

[node name="PlusFightButton" type="Button" parent="DebugButton"]
offset_left = 226.0
offset_right = 291.0
offset_bottom = 31.0
text = "+1Fight"

[node name="EnemiesButton" type="Button" parent="DebugButton"]
offset_left = 296.0
offset_right = 370.0
offset_bottom = 31.0
text = "Enemies"

[node name="ManagerEnemy" type="Button" parent="DebugButton"]
offset_left = 296.0
offset_top = 36.0
offset_right = 373.0
offset_bottom = 67.0
text = "Manager"

[node name="ClearEnemiesButton" type="Button" parent="DebugButton"]
offset_left = 376.0
offset_right = 494.0
offset_bottom = 31.0
text = "Clear Enemies"

[node name="PlusGoldButton" type="Button" parent="DebugButton"]
offset_left = 499.0
offset_right = 566.0
offset_bottom = 31.0
text = "+1 Gold"

[connection signal="pressed" from="PlayArea/PlayerCards/DrawPileButton" to="PlayArea/PlayerCards/DrawPileButton" method="_on_pressed"]
[connection signal="pressed" from="PlayArea/PlayerCards/DiscardPileButton" to="PlayArea/PlayerCards/DiscardPileButton" method="_on_pressed"]
[connection signal="pressed" from="PlayArea/EndTurnButton" to="PlayArea" method="_on_end_turn_button_pressed"]
[connection signal="gui_input" from="ShopPopup/GrayOut" to="ShopPopup" method="_on_gray_out_gui_input"]
[connection signal="gui_input" from="CardPileView/CardPileViewer" to="CardPileView/CardPileViewer" method="_on_gui_input"]
[connection signal="pressed" from="DebugButton/PlusMoveButton" to="." method="_on_plus_move_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusMoveButton2" to="." method="_on_plus_move_button_2_pressed"]
[connection signal="pressed" from="DebugButton/PlusBuyButton" to="." method="_on_plus_buy_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusBuyButton2" to="." method="_on_plus_buy_button_2_pressed"]
[connection signal="pressed" from="DebugButton/DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusFightButton" to="." method="_on_plus_fight_button_pressed"]
[connection signal="pressed" from="DebugButton/EnemiesButton" to="." method="_on_enemies_button_pressed"]
[connection signal="pressed" from="DebugButton/ManagerEnemy" to="." method="_on_manager_enemy_pressed"]
[connection signal="pressed" from="DebugButton/ClearEnemiesButton" to="." method="_on_clear_enemies_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusGoldButton" to="." method="_on_plus_gold_button_pressed"]
